# CSharpCMake

./: .gitignore
CSharpApp/: CMakeLists.txt
CSharpApp/CSharpApp/: CMakeLists.txt
CSharpApp/CSharpApp/src/: Program.cs
CSharpCppApp/: CMakeLists.txt
CSharpCppApp/CSharpCppApp/: CMakeLists.txt
CSharpCppApp/CSharpCppApp/src/: Program.cs
TestLibraries/CppDll/: CMakeLists.txt
TestLibraries/CppDll/include/: CppDll.h
TestLibraries/CppDll/src/: CppDll.cpp
